<resources>
    <string name="app_name">AgijagiSeller</string>

    <!-- All -->
    <string name="all_brand">브랜드명</string>
    <string name="all_name">제품명 도자기</string>
    <string name="all_price">100,000원</string>
    <string name="all_representative_name">대표자명</string>
    <string name="all_email">E-mail</string>
    <string name="all_add_file_text">사업자 등록증 추가</string>
    <string name="all_add_file_button">파일 추가</string>
    <string name="all_option_lettering_price">추가 금액</string>
    <string name="all_check">확인</string>
    <string name="all_date">23.09.09</string>
    <string name="all_negative">취소</string>
    <string name="all_delete">삭제</string>
    <string name="all_chat">채팅</string>
    <string name="all_notification">알림</string>
    <string name="all_update">수정</string>
    <string name="all_product_add">상품등록</string>

    <!-- Home fragment -->
    <string name="home_toolbar_title">판매자</string>
    <string name="home_management_my_store">내 스토어 관리</string>
    <string name="home_product_add">상품 등록</string>
    <string name="home_product_list">판매상품 리스트</string>
    <string name="home_order_cancel_change">반품/취소/교환</string>
    <string name="home_management_order_ship">주문/배송 관리</string>
    <string name="home_setting_notification">알림 설정</string>
    <string name="home_logout">로그아웃</string>
    <string name="home_quit">회원탈퇴</string>

    <!-- Notification Fragment -->
    <string name="notification_toolbar_title">알림</string>
    <string name="notification_empty_msg">알림이 없습니다</string>

    <!-- Notification Item -->
    <string name="notification_item_buyer_name">구매자명</string>
    <string name="notification_item_content">알림내용</string>
    <string name="notification_item_date">M월 d일</string>

    <!-- ProductList Fragment -->
    <string name="product_list_toolbar_title">판매상품 리스트</string>
    <string name="product_list_empty_msg">등록된 판매상품이 없습니다</string>

    <!-- ProductList Item -->
    <string name="product_list_item_status_hint">상태</string>

    <!-- Signup Fragment -->
    <string name="signup_toolbar_title">회원가입</string>
    <string name="signup_registration_number_hint">사업자등록번호 ( 000 – 00 – 00000 )</string>
    <string name="signup_password_hint">비밀번호 (공백 제외, 6 ~ 15 자)</string>
    <string name="signup_check_password_hint">비밀번호 확인</string>
    <string name="signup_business_address_hint">사업장 주소</string>
    <string name="signup_business_number_hint">사업장 전화번호 ( 010 – 0000 – 0000 )</string>
    <string name="signup_complete_button">가입하기</string>

    <!-- StoreManagement Fragment -->
    <string name="store_management_toolbar_title">내 스토어 관리</string>
    <string name="store_management_business_license_number_hint">사업자 등록번호</string>
    <string name="store_management_call_hint">연락처</string>
    <string name="store_management_password_hint">비밀번호</string>
    <string name="store_management_check_password_hint">비밀번호 확인</string>
    <string name="store_management_address_hint">주소</string>
    <string name="store_management_file_name">사업자 등록증 이미지</string>

    <!-- Chatting Fragment -->
    <string name="chatting_toolbar_title">채팅</string>
    <string name="chatting_empty_message">채팅 기록이 없습니다</string>

    <!-- Chatting Item -->
    <string name="chatting_item_title">제목</string>
    <string name="chatting_item_content">내용</string>
    <string name="chatting_item_date">M월 d일</string>

    <!-- Chatting Room Fragment -->
    <string name="chattingroom_send">채팅 전송 버튼</string>

    <!-- Chatting Room My Chat Item -->
    <string name="chattingroommychat_is_read">1</string>

    <!-- Chatting Room Other Chat Item -->
    <string name="chattingroomotherchat_writer">보낸 이</string>

    <!-- Chatting Room Chat(My & Other) Item -->
    <string name="chattingroomchat_time">오전 00:00</string>

    <!-- Product Detail Fragment -->
    <string name="productdetail_description">기본적인 블랙 색상의 깔끔한 디자인과 다양한 디자인으로 쓰임이 많은 도자기 그릇입니다. 도자기 재질로 무게감이 있어 안정적으로..</string>

    <!-- Product Registration Fragment -->
    <string name="productregistration_toolbar_title">상품등록</string>
    <string name="productregistration_max_number_of_photos">총 6장의 사진</string>
    <string name="productregistration_representative_photo_select_notice">체크버튼을 눌러서 대표사진을 선택할 수 있습니다.</string>
    <string name="productregistration_add_photo">사진추가</string>
    <string name="productregistration_info_title">상품정보</string>
    <string name="productregistration_input_product_name">상품명을 입력해주세요</string>
    <string name="productregistration_input_price">가격을 입력해주세요</string>
    <string name="productregistration_select_category">카테고리 선택</string>
    <string name="productregistration_select_order_made">주문제작 가능 여부 선택</string>
    <string name="productregistration_select_custom_options">주문제작 옵션 선택</string>
    <string name="productregistration_option_lettering">레터링</string>
    <string name="productregistration_option_painting">그림</string>
    <string name="productregistration_detail">상품 상세정보를 입력해주세요</string>
    <string name="productregistration_add_plan">도면추가</string>
    <string name="productregistration_count_plan">( 0 / 4 )</string>

    <!-- Notification Setting Fragment -->
    <string name="notification_setting_title">알림 설정</string>
    <string name="notification_setting_item_inquiry">상품문의</string>
    <string name="notification_setting_order">주문</string>
    <string name="notification_setting_order_detail">상품 주문 내역</string>
    <string name="notification_setting_trade_and_cancel">교환/취소</string>
    <string name="notification_setting_trade_and_cancel_detail">교환, 취소 신청 내역</string>

    <!-- Order Shipping Management Fragment -->
    <string name="order_shipping_management_title">주문/배송 관리</string>
    <string name="order_shipping_management_item_name">주문자명</string>

    <!-- Order Shipping Detail Fragment -->
    <string name="order_shipping_detail_title">주문/배송 관리</string>
    <string name="order_shipping_detail_cancel">주문 거부</string>
    <string name="order_shipping_detail_order_detail_info">주문 정보</string>
    <string name="order_shipping_detail_info_state">주문상태 : 발송처리</string>
    <string name="order_shipping_detail_order_number_text">주문번호</string>
    <string name="order_shipping_detail_order_number">00000000000000</string>
    <string name="order_shipping_detail_product_name_text">상품명</string>
    <string name="order_shipping_detail_product_name">도자기</string>
    <string name="order_shipping_detail_option_text">옵션</string>
    <string name="order_shipping_detail_option">옵션1 : Blue</string>
    <string name="order_shipping_detail_price_text">결제금액</string>
    <string name="order_shipping_detail_price">159,000원</string>
    <string name="order_shipping_detail_buyer_name">주문자명</string>
    <string name="order_shipping_detail_buyer_phone_number">010-0001-1101</string>
    <string name="order_shipping_detail_buyer_address">배송지 주소가 들어갑니다. 시군구 도로명 상세주소 (우편번호)</string>

    <!-- Dialog -->
    <string name="dialog_message">로그아웃 할까요?</string>

    <!-- Login -->
    <string name="login_google">구글로그인으로 시작</string>
    <string name="login_naver">네이버로그인으로 시작</string>
    <string name="login_kakao">카카오로그인으로 시작</string>

    <!-- Naver Client -->
    <string name="naver_client_id">3fQPPxdlQDBkFm9vh5O7</string>
    <string name="naver_client_secret">J5BA8Aeghd</string>
    <string name="naver_client_name">Agijagi</string>

</resources>