<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:strokeColor="@color/jagi_black_42"
    app:strokeWidth="1dp"
    android:backgroundTint="@color/jagi_brown">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="312dp"
        android:layout_height="120dp">

        <TextView
            android:id="@+id/textview_dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/dialog_message"
            android:textAppearance="@style/body_bold_19"
            android:textColor="@color/jagi_ivory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_dialog_positive"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/body_bold_19"
            android:text="@string/all_check"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/jagi_ivory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textview_dialog_negative"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textview_dialog_positive"
            android:textAppearance="@style/body_bold_19"
            android:text="@string/all_negative"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/jagi_ivory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>