<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.product.ProductRegistrationFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_productregistration"
        style="@style/Toolbar.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back_24px"
        app:title="@string/productregistration_toolbar_title" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_productregistration">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_productregistration_image_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/productregistration_max_number_of_photos"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_productregistration_image_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/productregistration_representative_photo_select_notice"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                app:layout_constraintStart_toStartOf="@id/textview_productregistration_image_title"
                app:layout_constraintTop_toBottomOf="@+id/textview_productregistration_image_title" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_productregistrationregistration_picture"
                android:layout_width="64dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/wide_box_rounded_button_stroke"
                android:paddingHorizontal="8dp"
                android:text="@string/productregistration_add_photo"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                android:textColor="@color/jagi_ivory"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textview_productregistration_image_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_productregistration_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintEnd_toEndOf="@id/button_productregistrationregistration_picture"
                app:layout_constraintStart_toStartOf="@id/textview_productregistration_image_title"
                app:layout_constraintTop_toBottomOf="@id/textview_productregistration_image_sub_title"
                app:spanCount="3"
                tools:itemCount="6"
                tools:listitem="@layout/item_product_registration_picture" />

            <TextView
                android:id="@+id/textview_productregistration_info_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/productregistration_info_title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/recyclerview_productregistration_image"
                app:layout_constraintTop_toBottomOf="@id/recyclerview_productregistration_image" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_productregistration_product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/textview_productregistration_info_title"
                app:layout_constraintTop_toBottomOf="@id/textview_productregistration_info_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textinputedittext_productregistration_product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/productregistration_input_product_name"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_productregistration_product_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="@id/textinputlayout_productregistration_product_name"
                app:layout_constraintStart_toStartOf="@id/textinputlayout_productregistration_product_name"
                app:layout_constraintTop_toBottomOf="@id/textinputlayout_productregistration_product_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textinputedittext_productregistration_product_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/productregistration_input_price"
                    android:inputType="number|numberDecimal"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_productregistration_select_category"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/jagi_black_42"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="@id/textinputlayout_productregistration_product_price"
                app:layout_constraintStart_toStartOf="@id/textinputlayout_productregistration_product_price"
                app:layout_constraintTop_toBottomOf="@id/textinputlayout_productregistration_product_price">

                <AutoCompleteTextView
                    android:id="@+id/autocompletetextview_productregistration_select_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/productregistration_select_category"
                    android:inputType="none"
                    app:simpleItems="@array/product_dropdown_select_category" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_productregistration_select_order_made"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/jagi_black_42"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="@id/textinputlayout_productregistration_select_category"
                app:layout_constraintStart_toStartOf="@id/textinputlayout_productregistration_select_category"
                app:layout_constraintTop_toBottomOf="@id/textinputlayout_productregistration_select_category">

                <AutoCompleteTextView
                    android:id="@+id/autocompletetextview_productadd_select_order_made"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/productregistration_select_order_made"
                    android:inputType="none"
                    app:simpleItems="@array/product_dropdown_select_isordermade" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textview_productregistration_custom_option_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/productregistration_select_custom_options"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:layout_constraintStart_toStartOf="@id/textinputlayout_productregistration_select_order_made"
                app:layout_constraintTop_toBottomOf="@id/textinputlayout_productregistration_select_order_made" />

            <CheckBox
                android:id="@+id/checkbox_productregistration_option_lettering"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/productregistration_option_lettering"
                app:layout_constraintStart_toStartOf="@id/textview_productregistration_custom_option_choice"
                app:layout_constraintTop_toBottomOf="@id/textview_productregistration_custom_option_choice" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_productregistration_option_lettering_price"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginEnd="16dp"
                android:gravity="end|center_vertical"
                android:padding="0dp"
                app:hintEnabled="false"
                app:layout_constraintBottom_toBottomOf="@id/checkbox_productregistration_option_lettering"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/checkbox_productregistration_option_lettering">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textinputedittext_productregistration_option_lettering_price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end|center_vertical"
                    android:hint="@string/all_price"
                    android:inputType="number|numberDecimal"
                    android:padding="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkbox_productregistration_option_painting"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/productregistration_option_painting"
                app:layout_constraintStart_toStartOf="@id/checkbox_productregistration_option_lettering"
                app:layout_constraintTop_toBottomOf="@id/checkbox_productregistration_option_lettering" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_productregistration_option_painting_price"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:gravity="end|center_vertical"
                android:padding="0dp"
                app:hintEnabled="false"
                app:layout_constraintBottom_toBottomOf="@id/checkbox_productregistration_option_painting"
                app:layout_constraintEnd_toEndOf="@id/textinputlayout_productregistration_option_lettering_price"
                app:layout_constraintTop_toTopOf="@id/checkbox_productregistration_option_painting">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textinputedittext_productregistration_option_painting_price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end|center_vertical"
                    android:hint="@string/all_price"
                    android:inputType="number|numberDecimal"
                    android:padding="0dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout_productregistration_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="@id/textinputlayout_productregistration_option_painting_price"
                app:layout_constraintStart_toStartOf="@id/checkbox_productregistration_option_painting"
                app:layout_constraintTop_toBottomOf="@id/checkbox_productregistration_option_painting">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textinputedittext_productregistration_detail"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:gravity="start"
                    android:hint="@string/productregistration_detail"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textview_productregistration_plan_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/productregistration_add_plan"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/textinputlayout_productregistration_detail"
                app:layout_constraintTop_toBottomOf="@id/textinputlayout_productregistration_detail" />

            <TextView
                android:id="@+id/textview_productregistration_plan_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/productregistration_count_plan"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                app:layout_constraintBaseline_toBaselineOf="@+id/textview_productregistration_plan_title"
                app:layout_constraintLeft_toRightOf="@+id/textview_productregistration_plan_title" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_productregistration_add_plan"
                android:layout_width="64dp"
                android:layout_height="24dp"
                android:background="@drawable/wide_box_rounded_button_stroke"
                android:paddingHorizontal="8dp"
                android:text="@string/productregistration_add_plan"
                android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                android:textColor="@color/jagi_ivory"
                app:layout_constraintBottom_toBottomOf="@id/textview_productregistration_plan_title"
                app:layout_constraintEnd_toEndOf="@id/textinputlayout_productregistration_detail"
                app:layout_constraintTop_toTopOf="@id/textview_productregistration_plan_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_productregistration_plan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="@id/button_productregistration_add_plan"
                app:layout_constraintStart_toStartOf="@id/textview_productregistration_plan_title"
                app:layout_constraintTop_toBottomOf="@id/textview_productregistration_plan_title"
                tools:itemCount="4"
                tools:listitem="@layout/item_product_registration_plan" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_product_add_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/wide_box_selected_active"
                android:padding="8dp"
                android:text="@string/all_check"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="@color/jagi_ivory"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerview_productregistration_plan" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
