<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".feature.login.view.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageview_login_thumbnail"
            android:layout_width="0dp"
            android:layout_height="280dp"
            android:background="@drawable/thumbnail"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="128dp"
            android:backgroundTint="@color/google_login"
            android:paddingHorizontal="24dp"
            android:text="@string/login_google"
            android:textAppearance="@style/title_bold_16"
            android:textColor="@color/black"
            app:cornerRadius="12dp"
            android:paddingVertical="16dp"
            android:drawableLeft="@drawable/google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageview_login_thumbnail" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login_naver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:backgroundTint="@color/naver_login"
            android:paddingHorizontal="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/login_naver"
            android:textAppearance="@style/title_bold_16"
            android:textColor="@color/white"
            android:paddingVertical="16dp"
            app:cornerRadius="12dp"
            app:icon="@drawable/naver"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_login_google" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login_kakao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:backgroundTint="@color/kakao_login"
            android:paddingHorizontal="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/login_kakao"
            android:textAppearance="@style/title_bold_16"
            android:textColor="@color/black"
            android:paddingVertical="16dp"
            app:cornerRadius="12dp"
            app:icon="@drawable/kakao"
            app:iconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_login_naver" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>